--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: odenet_wordnet_de
-description: A sample command-line application with basic argument parsing.
+description: >-
+  Library and simple CLI app for Open German WordNet.
 version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/yuwash/odenet_wordnet_de
 
 environment:
   sdk: ^3.7.1
@@ -14,3 +15,9 @@ dependencies:
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
+
+topics:
+  - language
+
+executables:
+  odenet-wordnet-de: odenet_wordnet_de
